Migrate duplicate name hash to HashMap